<resources>
    <string name="dialog_general_button_close">Close</string>
    <string name="dialog_general_button_cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_converting_saved_games_title">Upgrading new version</string>
    <string name="dialog_converting_saved_games_message">For this new version of MathDoku, your saved games are now being converted (one time only).</string>
    <string name="dialog_converting_cleanup_v1_message">Clean up data of version 1 of MathDoku (one time only).</string>
    <string name="puzzle_help_dialog_leadin">Thanks for installing MathDoku for Android.</string>
    <string name="puzzle_help_dialog_help_section_title">Help</string>
    <string name="puzzle_help_dialog_goal_section_title">Your goal</string>
    <string name="puzzle_help_dialog_goal_section_body">Fill in each row and column with digits from 1 to grid size.\n\nDigits can and must be used only once per row and column.\n\nThick lines indicate \'cages\' - each cage has an arithmetic puzzle, which must be solved by the digits in the cage, e.g. \'5+\' means all digits in that cage add to 5. The order in which the digits are used in the cage is not relevant.\n\nDigits can be used more than once per cage, so long as there is only one of a digit per row or column.</string>
    <string name="puzzle_help_dialog_how_to_play__section_title">How to play</string>
    <string name="puzzle_help_dialog_how_to_play_section_body">Touch to select a cell in the grid, then either swipe towards a digit to select it, or touch the button with the number you\'d like to insert. By double tapping a cell you can switch between the \'normal\' and the \'maybe\' (or \'pencil\') mode. In \'maybe\' mode you can mark multiple possibilities for the cell.\n\nPuzzles will be saved automatically.</string>
    <string name="puzzle_help_dialog_version_section_title">Version</string>
    <string name="puzzle_help_dialog_license_section_title">License</string>
    <string name="puzzle_help_dialog_project_home_section_title">Project Home</string>
    <string name="puzzle_help_dialog_contributors_section_title">Contributors</string>
    <string name="puzzle_help_dialog_contributors_section_body">MathDoku was initially developed by Ben Buxton. Contributions have been made by: Stephen Lee, Pimm Hogeling, Paul Dingemans, Anthony Paul, Christoph Steindl and Alexander Tesfamichael. Also we would like to thank all users who have submitted bugs and feature requests.</string>
    <string name="puzzle_help_dialog_neutral_button">Changes</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_lead_in_version_2">Welcome to version 2 of MathDoku. New cool features like statistics, an archive and game sharing have been added. We have chosen not to convert games stored with version 1 of MathDoku. Please play a few simple games first to get accustomed to the new way of playing. We hope you will enjoy this new version.</string>
    <string name="changelog_version_title">Version</string>
    <string name="changelog_changes_title">Changes</string>
    <string name="changelog_changes_body">- Swipe input can be disabled.\n- Better back button behaviour.\n- Crash and bug fixes.\n\nFor a full list of changes please go to our website using the link below.</string>
    <string name="changelog_issues_title">Bugs and features</string>
    <string name="changelog_issues_body">Please report any issues or feature requests via the link below. Only issues written in English will be dealt with.</string>
    <string name="action_bar_subtitle_puzzle_fragment">Play a game</string>
    <string name="action_archive">Archive</string>
    <string name="action_cheats">Cheats...</string>
    <string name="action_clear_grid">Clear grid</string>
    <string name="action_new_game">New Game</string>
    <string name="action_check_progress">Check Progress</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_reveal_cell">Reveal cell</string>
    <string name="action_reveal_operator">Reveal operator</string>
    <string name="action_show_solution">Show solution</string>
    <string name="dialog_puzzle_parameters_title">Create new game</string>
    <string name="dialog_puzzle_parameters_puzzle_size">Puzzle size</string>
    <string name="dialog_puzzle_parameters_operators_in_cage_visible">Operators in cage visible</string>
    <string name="dialog_puzzle_parameters_difficulty">Difficulty</string>
    <string name="dialog_puzzle_parameters_neutral_button">Generate</string>
    <string name="dialog_building_puzzle_title">Building puzzle</string>
    <string name="dialog_building_puzzle_message">A new puzzle is being built. It will be ready in a few seconds.</string>
    <string name="general_settings_actionbar_title">General settings</string>
    <string name="puzzle_setting_group_assistance">Assistance</string>
    <string name="puzzle_setting_bad_cage_math_visible_title">Mark bad maths</string>
    <string name="puzzle_setting_bad_cage_math_visible_summary">Highlight cages with incorrect maths</string>
    <string name="puzzle_setting_duplicate_digits_visible_title">Mark duplicates</string>
    <string name="puzzle_setting_duplicate_digits_visible_summary">Highlight duplicate digits in a row or column</string>
    <string name="puzzle_setting_clear_maybes_title">Clear maybes</string>
    <string name="puzzle_setting_clear_maybes_summary">Clear maybes when used in another cell on the same row or column</string>
    <string name="puzzle_setting_group_display">Display</string>
    <string name="puzzle_setting_theme_title">Theme</string>
    <string name="puzzle_setting_outer_swipe_circle_title">Double swipe circle</string>
    <string name="puzzle_setting_outer_swipe_circle_visible_from_grid_size_short">Size %1$d and above</string>
    <string name="puzzle_setting_outer_swipe_circle_visible_from_grid_size_long">Display a second swipe circle for puzzles of size %1$d and above</string>
    <string name="puzzle_setting_outer_swipe_circle_visible_never">Never display a second swipe circle</string>
    <string name="puzzle_setting_input_type_title">Digit input mode.</string>
    <string name="puzzle_setting_input_type_summary">Use buttons and/or swipe circle.</string>
    <string name="puzzle_setting_colored_digits_title">Colored digits</string>
    <string name="puzzle_setting_colored_digits_summary">Use colored digits to distinguish maybe numbers from normal numbers</string>
    <string name="puzzle_setting_maybes_displayed_in_grid_title">Maybes in grid</string>
    <string name="puzzle_setting_maybes_displayed_in_grid_summary">Display maybe numbers in a grid</string>
    <string name="puzzle_setting_timer_visible_title">Display timer</string>
    <string name="puzzle_setting_timer_visible_summary">Display a timer while solving a puzzle</string>
    <string name="puzzle_setting_full_screen_title">Full screen</string>
    <string name="puzzle_setting_full_screen_summary">Play in full screen mode by hiding Android\'s notification bar</string>
    <string name="puzzle_setting_wake_lock_title">Keep screen on</string>
    <string name="puzzle_setting_wake_lock_summary">Prevent the screen from going off while playing</string>
    <string name="puzzle_setting_group_sound">Sound</string>
    <string name="puzzle_setting_sound_effects_title">Sound effects</string>
    <string name="puzzle_setting_sound_effects_summary">Enable the sound effects</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="dialog_reveal_solution_confirmation_title">Reveal solution?</string>
    <string name="dialog_reveal_solution_confirmation_message">Are you sure you want to reveal the solution of this puzzle?</string>
    <string name="dialog_reveal_solution_confirmation_negative_button">No, I\'ll solve it myself</string>
    <string name="dialog_reveal_solution_confirmation_positive_button">Yes, I give up</string>
    <string name="dialog_clear_grid_confirmation_title">Clear entire grid?</string>
    <string name="dialog_clear_grid_confirmation_message">Are you sure you want to clear the entire grid?</string>
    <string name="dialog_clear_grid_confirmation_negative_button">No, leave it</string>
    <string name="dialog_clear_grid_confirmation_positive_button">Yes, start over</string>
    <string name="main_ui_maybe">Maybe</string>
    <string name="main_ui_clear">Clear</string>
    <string name="main_ui_undo">Undo</string>
    <string name="main_ui_button1">1</string>
    <string name="main_ui_button2">2</string>
    <string name="main_ui_button3">3</string>
    <string name="main_ui_button4">4</string>
    <string name="main_ui_button5">5</string>
    <string name="main_ui_button6">6</string>
    <string name="main_ui_button7">7</string>
    <string name="main_ui_button8">8</string>
    <string name="main_ui_button9">9</string>
    <string name="main_ui_buttonC">C</string>
    <string name="dialog_send_feedback_title">Send feedback</string>
    <string name="dialog_send_feedback_text_1">Really great that you are willing to give feedback on MathDoku.\n\nPlease remember this is a free game without any advertisements. So we are not earning any money on this app. This game is just developed by enthusiasts in their spare time so we may not be able to address all requests.\nWe prefer to receive feedback on issues or feature requests via the link below:</string>
    <string name="dialog_send_feedback_text_2">\nBut you can also sent an email if that is more comfortable for you. Note, we can only address issues written in English.</string>
    <string name="dialog_send_feedback_positive_button">Send email</string>
    <string name="feedback_email_subject">Feedback on MathDoku</string>
    <string name="feedback_email_body">[Please remove this text and enter your feedback here. This email message contains a screendump of the screen just before you chose \'Send feedback\'. You can remove this screendump if it is not relevant for your feedback. The other attachment contains some basic details about the app and the size of your device and the value of the settings and preferences. This information can be helpful for us to understand your feedback but you\'re free to remove it.]</string>
    <string name="feedback_choose_action_title">Share a MathDoku game</string>
    <string name="dialog_invalid_share_url_title">Invalid MathDoku link</string>
    <string name="dialog_invalid_share_url_body">Sorry, this link to the MathDoku puzzle is not valid. Please contact the sender of the link and request a new link to be sent.</string>
    <string name="hint_swipe_basic">Touch and hold the cell for which you want to enter a digit.</string>
    <string name="hint_swipe_outside_cell">Now swipe towards the appropriate digit until it is highlighted.</string>
    <string name="hint_swipe_basic_cell_at_border">Even if the appropriate digit is not visible, you can still swipe in the appropriate direction. Touch a cell near the middle of the grid to become familiar with position of digit(s) %1$s.</string>
    <string name="hint_swipe_rotate">Rotate the swipe line to select a digit. End the swipe when the appropriate digit is highlighted.</string>
    <string name="hint_swipe_release">Stop swiping to select the highlighted digit or rotate the swipe line to select another digit.</string>
    <string name="hint_swipe_valid_digit_completed">You have just completed a swipe for digit %1$s.</string>
    <string name="hint_swipe_invalid_digit_completed">Swiping in this direction will reveal a digit when playing a bigger puzzle.</string>
</resources>