<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/checkprogress"
        android:icon="@drawable/menu_check_progress"
        android:orderInCategory="1"
        android:title="@string/action_check_progress"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cheat"
        android:orderInCategory="10"
        android:title="@string/action_cheats"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_reveal_cell"
                android:title="@string/action_reveal_cell" />
            <item
                android:id="@+id/action_reveal_operator"
                android:title="@string/action_reveal_operator" />
            <item
                android:id="@+id/action_show_solution"
                android:title="@string/action_show_solution" />
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_grid"
        android:orderInCategory="20"
        android:title="@string/action_clear_grid"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/social_share"
        android:orderInCategory="80"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_game"
        android:icon="@drawable/content_new"
        android:orderInCategory="90"
        android:title="@string/action_new_game"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_puzzle_settings"
        android:orderInCategory="98"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_feedback"
        android:orderInCategory="99"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_puzzle_help"
        android:icon="@drawable/help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
