<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/social_share"
        android:orderInCategory="10"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_feedback"
        android:orderInCategory="99"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"></item>

</menu>
